<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:clickable="true"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:elevation="12dp"
        android:id="@+id/view2"
        app:cardCornerRadius="60dp"
        app:cardBackgroundColor="@android:color/background_dark"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1">
        <ImageView
            android:layout_height="120dp"
            android:layout_width="match_parent"
            android:id="@+id/imageViewArt"
            android:src="@drawable/no_image_available"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        </ImageView>
    </android.support.v7.widget.CardView>

    <TextView
        android:text="Track Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:id="@+id/textView" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignLeft="@+id/textViewAlbumName"
        android:layout_alignStart="@+id/textViewAlbumName"
        android:id="@+id/textViewTrackName" />

    <TextView
        android:text="Artist Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignLeft="@+id/textView"

        android:layout_marginTop="20dp"
        android:id="@+id/textView3" />

    <TextView
        android:text="Album Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/textView3"
        android:id="@+id/textView5" />

    <TextView
        android:text="Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/textView7" />

    <TextView
        android:text="ReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/textView10" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewArtistName"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/textViewAlbumName"
        android:layout_alignStart="@+id/textViewAlbumName"  />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAlbumName"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textView5"
       />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPrice"
        android:layout_above="@+id/textView10"
        android:layout_alignLeft="@+id/textViewAlbumName"
        android:layout_alignStart="@+id/textViewAlbumName"  />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewReleaseDate"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignLeft="@+id/textViewAlbumName"
        android:layout_alignStart="@+id/textViewAlbumName"  />


</RelativeLayout>