<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="60dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:srcCompat="@drawable/no_image_available"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/trackArtImageView" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/trackArtImageView"
        android:textSize="16sp"
        android:layout_margin="3dp"
        android:layout_toRightOf="@+id/trackArtImageView"
        android:layout_toEndOf="@+id/trackArtImageView"
        android:id="@+id/trackName" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/trackArtImageView"
        android:layout_margin="3dp"
        android:textSize="12sp"
        android:layout_below="@+id/trackName"
        android:id="@+id/artistName" />
</RelativeLayout>